<resources>
    <string name="banner_ad_unit_id_hist">ca-app-pub-2504725253688326/3961896203</string>
    <string name="banner_ad_unit_id_mainact">ca-app-pub-2504725253688326/3246432523</string>
    <string name="banner_ad_unit_id_settings">ca-app-pub-2504725253688326/5294627316</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">Reservations Manager</string>
    <string name="label_reservas">Reservations</string>
    <string name="label_historico_reservas">Historic Reservations </string>
    <string name="label_nueva_reserva">New Reservation</string>
    <string name="label_administracion">Administration</string>
    <string name="action_settings">Settings</string>
    <string name="agenda">agenda</string>
    <string name="calendario">Calendar</string>
    <string name="seleccionar_fecha">Select date</string>
    <string name="fijo">Fixed</string>
    <string name="hora">Hour:</string>
    <string name="minutos">Minutes:</string>
    <string name="nueva_reserva">New reservation</string>
    <string name="guardar">Save</string>
    <string name="hora_fin">Ending hour:</string>
    <string name="seleccionar_horaIni">Select start hour</string>
    <string name="seleccionar_horaFin">select ending hour</string>
    <string name="a_nombre_de">Reserved to?</string>
    <string name="eliminar">Delete</string>
    <string name="editar">Edit</string>
    <string name="title_activity_options">options</string>
    <string name="listado_reservados">Dates reserved until today</string>
    <string name="historico">Historic</string>
    <string name="borrar_todos">Delete History</string>
    <string name="no_se_encuentran_reservas_a_la_fecha">There is no reservations.</string>
    <string name="reservado_a">Reserved to</string>
    <string name="prueba">TEST</string>
    <string name="Error_de_Carga_agenda">Error charging the agenda</string>
    <string name="fijo_los">Fixed on </string>
    <string name="a_partir_del">from</string>
    <string name="de_desde">from</string>
    <string name="a_hasta">to</string>
    <string name="todos">All</string>
    <string name="seleccionar_objeto_de_alquiler">Select the object to rent</string>
    <string name="Historicos_borrados">Historic records has been deleted.</string>
    <string name="la_reserva_ha_sido_eliminada">The reservation has been deleted.</string>
    <string name="objeto_de_alquiler_borrado">The object to rent has been deleted.</string>
    <string name="error_borrar_historicos">Error deleting historic records.</string>
    <string name="validacion_horas_invertidas">The starting hour couldn\'t be grated than ending hour.</string>
    <string name="validacion_reservas_superpuestas">The reservation is overlaid with another saved reservation.</string>
    <string name="error_al_guardar_reserva">Error saving the reservation.</string>
    <string name="validacion_fecha_pasada">It is not possible to book with a date before the current date.</string>
    <string name="error_carga_vistas_reserva">Error charging the reservation.</string>
    <string name="error_al_borrar_el_registro">Error deleted the record</string>
    <string name="objeto_de_alquiler_con_reservas">The object to rent have reservations assigned.</string>
    <string name="validacion_campos_vacios">the object to rent, fields Name, date, starting hour, ending hour are mandatory.</string>
    <string name="Domingo">Sunday</string>
    <string name="Lunes">Monday</string>
    <string name="Martes">Tuesday</string>
    <string name="Miercoles">Wednesday</string>
    <string name="Jueves">Trursday</string>
    <string name="Viernes">Friday</string>
    <string name="Sabado">Saturday</string>
    <string name="opciones">Settings</string>
    <string name="agregar_odalquiler">Add Object to rent</string>
    <string name="no_se_encuentran_objetos_de_alquiler">There are no objects to rent.</string>
    <string name="no_se_encuentran_objetos_de_alquiler_init">There are no objects to rent.Please insert an object to rent.</string>
    <string name="podras_editar_en">Is possible to edit and create new objects to rent on administrations menu.</string>
    <string name="que_deseas_alquilar">What do you wish to rent?</string>
    <string name="aceptar">OK</string>
    <string name="Reserva">Rent:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exampleHour">XXhs</string>
    <string name="dia">Dia</string>
    <string name="agenda_text">Agenda</string>
    <string name="semana">Semana</string>
</resources>







