<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_aplicacion"
    android:orientation="vertical"
    tools:context="ar.com.eduit.reservassala.AgregarReserva">

    <TextView
        android:id="@+id/tvID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


    <Spinner
        android:id="@+id/sp_odalquiler"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>


    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/a_nombre_de"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:textColor="@color/item_text_color"
        android:textColorHint="@color/text_hint_color"
        android:textSize="@dimen/dim_text_item" />


    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/seleccionar_fecha"
        android:inputType="date"
        android:maxLines="1"
        android:onClick="etFechaClick"
        android:textColor="@color/item_text_color"
        android:textColorHint="@color/text_hint_color"
        android:textSize="@dimen/dim_text_item" />

    <EditText
        android:id="@+id/etHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/seleccionar_horaIni"
        android:inputType="time"
        android:maxLines="1"
        android:onClick="etHoraClick"
        android:textColor="@color/item_text_color"
        android:textColorHint="@color/text_hint_color"
        android:textSize="@dimen/dim_text_item" />

    <EditText
        android:id="@+id/etHoraFin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/seleccionar_horaFin"
        android:inputType="time"
        android:maxLines="1"
        android:onClick="etHoraClickFin"
        android:textColor="@color/item_text_color"
        android:textColorHint="@color/text_hint_color"
        android:textSize="@dimen/dim_text_item" />

    <CheckBox
        android:id="@+id/cbFijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:checked="false"
        android:text="@string/fijo"
        android:textColor="@color/item_text_color"
        android:textSize="@dimen/dim_text_item" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="guardarReserva"
        android:text="@string/guardar" />

    <LinearLayout
        android:id="@+id/llReservados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listado_reservados"
            android:textColor="@color/item_text_color"
            android:textSize="@dimen/dim_text_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView

                android:id="@+id/lvListaReservas"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lista_reservados"
                android:divider="@color/divisor_lista_reservas"
                android:dividerHeight="1sp"
                android:orientation="vertical" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
