<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_aplicacion"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:paddingTop="20dp"
        android:textSize="@dimen/dim_text_item"
        android:text="@string/no_se_encuentran_objetos_de_alquiler_init"
        android:textColor="@color/item_text_color"
        android:textColorHint="@color/text_hint_color" />

    <EditText
        android:id="@+id/etAlquiler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@color/gris"
        android:inputType="textCapWords"
        android:backgroundTint="@color/Blanco"
        android:hint="@string/que_deseas_alquilar"
        android:textSize="@dimen/dim_text_item"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/negro" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/dim_text_item"
        android:padding="10dp"
        android:text="@string/aceptar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textSize="@dimen/dim_text_item"
            android:text="@string/podras_editar_en"
            android:textColor="@color/item_text_color"
            android:textColorHint="@color/text_hint_color"
            android:drawableEnd="@drawable/ic_abm_reserv"/>

    </LinearLayout>
</LinearLayout>