<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_aplicacion"
    android:gravity="center"
    tools:context=".SetingsActivity"
    >

        <TextView
            android:id="@+id/tvEmptyMesage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="100dp"
            android:text="@string/no_se_encuentran_objetos_de_alquiler"
            android:textColor="@color/item_text_color"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            >

            <ListView
                android:id="@+id/lvListaAlquileres"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:divider="@color/divisor_lista_reservas"
                android:dividerHeight="1sp"
                android:orientation="vertical" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="agregarAlquiler"
                android:text="@string/agregar_odalquiler" />

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="6"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id_settings"/>
        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>